# suga_demos

./: .gitignore  README.md  platform.yaml
fargate-express/: Dockerfile  README.md  docker-compose.yml  main.ts  package-lock.json  package.json  platform.yaml  suga.yaml  tsconfig.json
fargate-express/frontend/: index.html
fargate-express/terraform/: manifest.json
fargate-express/terraform/stacks/fargate-express-demo/: cdk.tf.json  terraform.tfvars.template
lambda-fastapi/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  suga.yaml
lambda-fastapi/frontend/: index.html
lambda-fastapi/terraform/: manifest.json
lambda-fastapi/terraform/stacks/lambda-fastapi-demo/: cdk.tf.json
